--- a/index.tex
+++ b/index.tex
@@ -600,21 +600,376 @@ hanya sekadar berjalan kaki menuju pantai di malam hari.
 
 \chapter{UTS-4 My Shapes}\label{uts-4-my-shapes}
 
-\section{Pendahuluan}\label{pendahuluan-1}
+\section{Identitas Diri}\label{identitas-diri-1}
 
-Saya
+\begin{itemize}
+\tightlist
+\item
+  \textbf{Nama:} Muhammad Azikra Wira Pratama\\
+\item
+  \textbf{NIM:} 18224089
+\item
+  \textbf{Kelas:} K-01
+\end{itemize}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Pernyataan Misi Pribadi}\label{pernyataan-misi-pribadi}
+
+\begin{quote}
+``Saya ingin menjadi seseorang yang menggunakan kemampuan teknologi
+untuk menciptakan solusi yang berdampak positif bagi masyarakat. Positif
+ini tidak hanya mencakup dampak positif secara kehidupan namun
+perkembangan masyarkat mulai dari cara berpikir untuk mau berkembang dan
+memiliki rasa manusiawi.''
+\end{quote}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Kekuatan Khas (S)}\label{kekuatan-khas-s}
+
+\subsection*{Kekuatan \#1: Rasa ingin tahu tinggi terhadap hal
+baru}\label{kekuatan-1-rasa-ingin-tahu-tinggi-terhadap-hal-baru}
+\addcontentsline{toc}{subsection}{Kekuatan \#1: Rasa ingin tahu tinggi
+terhadap hal baru}
+
+Saya selalu terdorong untuk mempelajari hal-hal baru dan mencari tahu
+bagaimana sesuatu bekerja. Rasa ingin tahu ini membantu saya cepat
+memahami topik baru dan beradaptasi dengan perubahan, terutama dalam
+bidang teknologi yang terus berkembang.
+
+\subsection*{Kekuatan \#2: Dapat menentukan skala prioritas sesuai yang
+dibutuhkan}\label{kekuatan-2-dapat-menentukan-skala-prioritas-sesuai-yang-dibutuhkan}
+\addcontentsline{toc}{subsection}{Kekuatan \#2: Dapat menentukan skala
+prioritas sesuai yang dibutuhkan}
+
+Saya mampu mengenali hal yang paling penting untuk dikerjakan terlebih
+dahulu dan mengatur waktu agar tetap efisien. Kemampuan ini membantu
+saya tetap fokus dan terarah dalam menghadapi banyak tugas sekaligus.
+
+\subsection*{Kekuatan \#3: Berempati dengan situasi yang dihadapi oleh
+teman}\label{kekuatan-3-berempati-dengan-situasi-yang-dihadapi-oleh-teman}
+\addcontentsline{toc}{subsection}{Kekuatan \#3: Berempati dengan situasi
+yang dihadapi oleh teman}
+
+Saya berusaha memahami kondisi dan perasaan orang lain sebelum mengambil
+tindakan. Sikap empati ini membuat saya dapat membangun hubungan yang
+baik, mendukung rekan kerja, dan menjaga suasana kerja yang positif.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Nilai Inti \& Gairah (H)}\label{nilai-inti-gairah-h}
+
+\subsection*{Nilai Inti \#1: Kreativitas menuangkan ide positif dan
+berbagi lewat sosial
+media}\label{nilai-inti-1-kreativitas-menuangkan-ide-positif-dan-berbagi-lewat-sosial-media}
+\addcontentsline{toc}{subsection}{Nilai Inti \#1: Kreativitas menuangkan
+ide positif dan berbagi lewat sosial media}
+
+Saya percaya ide dan kreativitas akan bermakna jika dibagikan. Melalui
+media sosial, saya senang membagikan hal-hal positif yang bisa
+menginspirasi dan membangun semangat orang lain.
+
+\subsection*{Nilai Inti \#2: Mengingatkan teman mengenai hal yang kurang
+tepat}\label{nilai-inti-2-mengingatkan-teman-mengenai-hal-yang-kurang-tepat}
+\addcontentsline{toc}{subsection}{Nilai Inti \#2: Mengingatkan teman
+mengenai hal yang kurang tepat}
+
+Saya menghargai kejujuran dan rasa tanggung jawab sosial. Mengingatkan
+teman dengan cara yang baik merupakan bentuk kepedulian agar lingkungan
+sekitar menjadi lebih baik dan saling belajar.
+
+Saya bersemangat tentang: Ikut mengembangkan komunitas. Saya ingin
+berkontribusi dalam kegiatan yang memperkuat hubungan antarindividu dan
+membantu sesama tumbuh bersama, baik di lingkungan kampus maupun
+masyarakat luas.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Keterampilan Utama (A)}\label{keterampilan-utama-a}
+
+\subsection*{\texorpdfstring{\textbf{Hard
+Skills:}}{Hard Skills:}}\label{hard-skills}
+\addcontentsline{toc}{subsection}{\textbf{Hard Skills:}}
+
+Saya memiliki kemampuan dasar dalam pemrograman Python, C, dan Java.
+Kemampuan ini melatih logika berpikir sistematis dan membantu saya
+memahami struktur permasalahan secara terukur.
+
+\subsection*{\texorpdfstring{\textbf{Soft
+Skills:}}{Soft Skills:}}\label{soft-skills}
+\addcontentsline{toc}{subsection}{\textbf{Soft Skills:}}
+
+Saya terbiasa bekerja sama dalam tim dan berkomunikasi secara efektif.
+Dalam kerja kelompok, saya berusaha memahami peran masing-masing anggota
+serta menjaga keterbukaan agar kerja sama berjalan lancar.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Profil Kepribadian (P)}\label{profil-kepribadian-p}
+
+\subsection*{\texorpdfstring{\textbf{Tipe MBTI:}
+INFP}{Tipe MBTI: INFP}}\label{tipe-mbti-infp}
+\addcontentsline{toc}{subsection}{\textbf{Tipe MBTI:} INFP}
+
+Saya cenderung reflektif, idealis, dan berorientasi pada makna dari
+setiap hal yang saya lakukan. Saya lebih fokus pada nilai dan tujuan
+yang mendasari pekerjaan.
+
+\subsection*{\texorpdfstring{\textbf{Gaya Kerja yang Disukai:} Menyukai
+tantangan baru dan
+kolaboratif.}{Gaya Kerja yang Disukai: Menyukai tantangan baru dan kolaboratif.}}\label{gaya-kerja-yang-disukai-menyukai-tantangan-baru-dan-kolaboratif.}
+\addcontentsline{toc}{subsection}{\textbf{Gaya Kerja yang Disukai:}
+Menyukai tantangan baru dan kolaboratif.}
+
+Saya lebih produktif saat bekerja dengan orang lain dalam lingkungan
+yang terbuka terhadap ide baru. Tantangan baru memberi saya motivasi
+untuk belajar dan berinovasi.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Pelajaran Hidup Kunci (E)}\label{pelajaran-hidup-kunci-e}
+
+\begin{itemize}
+\tightlist
+\item
+  Dari \textbf{berorganisasi}, saya belajar bahwa komunikasi yang
+  terbuka dan kerja sama yang saling mendukung adalah kunci keberhasilan
+  tim.
+\item
+  Dari \textbf{dunia perkuliahan}, saya belajar bahwa ilmu pengetahuan
+  tidak hanya datang dari materi kuliah, tetapi juga dari cara berpikir
+  kritis dan kemampuan menyesuaikan diri dengan perubahan.
+\end{itemize}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Refleksi Akhir}\label{refleksi-akhir}
+
+\begin{quote}
+\emph{Diriku yang esok hari ini harus menjadi lebih baik dari diriku
+yang saat ini. Saya menggunakan pola pikir itu dalam menghadapi berbagai
+hal dalam kehidupan.}
+\end{quote}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Catatan}\label{catatan}
+
+Template ini menggunakan konsep \textbf{S-H-A-P-E}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule\noalign{}
+Huruf & Arti & Fokus \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+\textbf{S} & Strengths & Kekuatan khas dan keunikan pribadi \\
+\textbf{H} & Heart & Nilai inti dan hal yang kamu cintai \\
+\textbf{A} & Abilities & Keterampilan utama (hard \& soft skills) \\
+\textbf{P} & Personality & Profil kepribadian dan gaya kerja \\
+\textbf{E} & Experiences & Pelajaran hidup dari pengalaman nyata \\
+\end{longtable}
 
 \bookmarksetup{startatroot}
 
 \chapter{UTS-5 My Personal Reviews}\label{uts-5-my-personal-reviews}
 
-Berikut cara saya melakukan review
-\href{./Doc.5.Mengevaluasi-Esai-Berdasarkan-Rubrik.pdf}{Menilai dan
-Mengevaluasi Esai Berdasarkan Rubrik}
+Berikut cara saya melakukan review: mengguan chatGPT, saya mengattach
+\href{skor_uts.pdf}{file promt ChatGPT}, disertai perintah :``self
+assess uts-1 sanpai uts-5 dari URL
+`https://ii-2100.github.io/all-about-me/'\,''
+
+ChatGPT melakukan self-assessment UTS-1 s.d. UTS-5 langsung dari laman
+yang Anda berikan dan menilai memakai rubrik tugas UTS (skala 1--5 per
+kriteria). Rekap skor siap diunduh sebagai CSV:
+\href{sandbox:/mnt/data/UTS_self_assessment.csv}{Download CSV
+ringkasan}.
 
 \bookmarksetup{startatroot}
 
-\chapter{My Concepts}\label{my-concepts}
+\chapter{Hasil Self-Assessment UTS (URL:
+ii-2100.github.io/all-about-me)}\label{hasil-self-assessment-uts-url-ii-2100.github.ioall-about-me}
+
+\section{Identifikasi}\label{identifikasi}
+
+\begin{itemize}
+\tightlist
+\item
+  Nama \& NIM penulis: \textbf{Muhammad Azikra Wira Pratama - 18224089}
+  (tertera di halaman depan portofolio).
+\item
+  Penilai: \textbf{Self-assessment (Muhammad Azikra Wira Pratama)}
+\item
+  Catatan cakupan: halaman beranda memuat ``About Me''; navigasi ke ``My
+  Songs for You'', ``My Stories for You'', ``My Shapes'', dan ``My
+  Personal Reviews'' tersedia.
+\end{itemize}
+
+\section{Tinjauan Umum}\label{tinjauan-umum}
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{UTS-1 (All About Me)} hadir di beranda (``Selamat Berjumpa /
+  About Me''). Isi memperkenalkan identitas dan latar personal secara
+  padat. (\href{https://ii-2100.github.io/all-about-me/}{II 2100})
+\item
+  \textbf{UTS-2 (My Songs for You)} memuat judul karya dan tautan audio,
+  namun lirik/isi tidak ditampilkan di halaman (file audio tidak bisa
+  saya akses dari sini), sehingga penilaian konten terbatas pada
+  kelengkapan presentasi.
+  (\href{https://ii-2100.github.io/all-about-me/My_Song_for_You/index.html}{II
+  2100})
+\item
+  \textbf{UTS-3 (My Stories for You)} berisi tautan ke beberapa cerita;
+  konten naratif kuat, terutama pada kisah keluarga ``Gaun Pengantin
+  Gladys'' serta kisah inspiratif lainnya.
+  (\href{https://ii-2100.github.io/all-about-me/My_Stories_for_You/index.html}{II
+  2100})
+\item
+  \textbf{UTS-4 (My SHAPE)} saat ini halaman kosong/tanpa isi, hanya
+  navigasi.
+  (\href{https://ii-2100.github.io/all-about-me/My_Shapes/index.html}{II
+  2100})
+\item
+  \textbf{UTS-5 (My Personal Reviews)} berisi metode/tautan panduan
+  review, namun belum ada contoh \textbf{review personal} yang lengkap
+  terhadap sebuah pesan/teks.
+  (\href{https://ii-2100.github.io/all-about-me/My_Personal_Reviews/index.html}{II
+  2100})
+\end{itemize}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Tinjauan Spesifik + Skor
+(1--5)}\label{tinjauan-spesifik-skor-15}
+
+\subsection{UTS-1 --- All About Me (di
+beranda)}\label{uts-1-all-about-me-di-beranda}
+
+\textbf{Skor per kriteria:} Orisinalitas \textbf{3}, Keterlibatan
+\textbf{3}, Humor \textbf{1}, Wawasan/Insight \textbf{3} → \textbf{Total
+10/20 (50\%)}. \textbf{Alasan singkat:} Perkenalan diri faktual dan
+jelas, namun gaya masih informatif ketimbang naratif (minim humor dan
+moment ``hook''). (\href{https://ii-2100.github.io/all-about-me/}{II
+2100}) \textbf{Saran perbaikan:} Buka dengan anekdot pribadi (1--2
+paragraf) yang ``mengikat'' (mis. titik balik karier/keluarga),
+tambahkan satu momen humor ringan, lalu tutup dengan refleksi singkat
+tentang nilai/visi diri agar aspek insight naik.
+
+\subsection{UTS-2 --- My Songs for You}\label{uts-2-my-songs-for-you-1}
+
+\textbf{Skor per kriteria:} Orisinalitas \textbf{2}, Keterlibatan
+\textbf{2}, Humor \textbf{1}, Inspirasi \textbf{2} → \textbf{Total 7/20
+(35\%)}. \textbf{Alasan singkat:} Halaman menampilkan judul lagu ``River
+in my Mind'', ``Heaven on Earth'', namun tanpa lirik/cerita di balik
+lagu sehingga sulit menilai aspek pesan, humor, dan inspirasi.
+(\href{https://ii-2100.github.io/all-about-me/My_Song_for_You/index.html}{II
+2100}) \textbf{Saran perbaikan:} Tambahkan lirik lengkap, 1 paragraf
+cerita proses kreatif, dan 2--3 kalimat ``pesan untukmu'' agar inspirasi
+terbaca; sertakan player/tautan yang dapat diputar langsung + fallback
+transkrip.
+
+\subsection{UTS-3 --- My Stories for
+You}\label{uts-3-my-stories-for-you-1}
+
+\textbf{Skor per kriteria:} Orisinalitas \textbf{5}, Keterlibatan
+\textbf{5}, Pengembangan Narasi \textbf{4}, Inspirasi \textbf{5} →
+\textbf{Total 19/20 (95\%)}. \textbf{Alasan singkat:} Cerita ``Gaun
+Pengantin Gladys'' dkk sangat personal, emosional, dan inspiratif; ritme
+bertutur hidup serta detail situasional kuat (konten ramu unsur
+penebusan/keluarga/iman).
+(\href{https://ii-2100.github.io/all-about-me/My_Stories_for_You/index.html}{II
+2100}) \textbf{Saran perbaikan:} Tambah ``lead'' 2--3 kalimat yang
+merangkum pesan kunci tiap cerita; akhiri dengan ajakan/refleksi 1--2
+kalimat agar resonansi ke pembaca makin jelas.
+
+\subsection{UTS-4 --- My SHAPE}\label{uts-4-my-shape}
+
+\textbf{Skor per kriteria:} Orisinalitas \textbf{1}, Keterlibatan
+\textbf{1}, Pengembangan \textbf{1}, Inspirasi \textbf{1} →
+\textbf{Total 4/20 (20\%)}. \textbf{Alasan singkat:} Konten belum
+tersedia.
+(\href{https://ii-2100.github.io/all-about-me/My_Shapes/index.html}{II
+2100}) \textbf{Saran perbaikan (prioritas):}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Tampilkan rekap SHAPE (Spiritual gifts, Heart, Abilities, Personality,
+  Experiences) dalam 1 tabel ringkas + 3--5 butir bukti;
+\item
+  Narasikan 2 pengalaman kunci (±150 kata/each) yang menunjukkan
+  ``signature strengths'';
+\item
+  Tutup dengan 3 rencana aksi konkret (who/what/when).
+\end{enumerate}
+
+\subsection{UTS-5 --- My Personal
+Reviews}\label{uts-5-my-personal-reviews-1}
+
+\textbf{Skor per kriteria:} Pemahaman Konsep \textbf{2}, Analisis Kritis
+\textbf{1}, Argumentasi (Logos) \textbf{1}, Etos \& Empati \textbf{2},
+Rekomendasi \textbf{1} → \textbf{Total 7/25 (28\%)}. \textbf{Alasan
+singkat:} Halaman berisi metode cara menilai, tetapi \textbf{belum ada}
+contoh \textbf{review personal} yang lengkap terhadap sebuah pesan/teks
+sehingga aspek analisis-argumentasi tak terbaca.
+(\href{https://ii-2100.github.io/all-about-me/My_Personal_Reviews/index.html}{II
+2100}) \textbf{Saran perbaikan:} Pilih 1 karya personal (mis.
+UTS-1/2/3), tulis review 400--600 kata: ringkas pesan, nilai dengan
+rubrik, berikan 2--3 bukti kutipan, evaluasi etos/empati, lalu tutup
+dengan rekomendasi perbaikan spesifik.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Rekap Skor (ringkas)}\label{rekap-skor-ringkas}
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{UTS-1:} 10/20 → \textbf{50\%}
+\item
+  \textbf{UTS-2:} 7/20 → \textbf{35\%}
+\item
+  \textbf{UTS-3:} 19/20 → \textbf{95\%}
+\item
+  \textbf{UTS-4:} 4/20 → \textbf{20\%}
+\item
+  \textbf{UTS-5:} 7/25 → \textbf{28\%}
+\end{itemize}
+
+CSV lengkap sudah saya siapkan untuk dokumentasi dan olah lanjut:
+\href{sandbox:/mnt/data/UTS_self_assessment.csv}{Download CSV
+ringkasan}.
+
+\section{Langkah Perbaikan Cepat (prioritas 1
+minggu)}\label{langkah-perbaikan-cepat-prioritas-1-minggu}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  \textbf{Lengkapi UTS-4 (My SHAPE)} sesuai saran di atas;
+\item
+  \textbf{Tambahkan lirik + sinopsis} untuk tiap lagu di UTS-2 agar bisa
+  dinilai isi/inspirasinya;
+\item
+  \textbf{Tulis 1 review personal penuh} (UTS-5) memakai rubrik (pilih
+  salah satu karya Anda sendiri sebagai objek);
+\item
+  Revisi UTS-1 dengan pembuka anekdot + refleksi nilai diri.
+\end{enumerate}
+
+Jika Anda mau, saya bisa bantu merapikan UTS-4 (tabel SHAPE + narasi)
+dan membuat kerangka cepat untuk \textbf{review} di UTS-5 dari salah
+satu karya Anda.
+
+\bookmarksetup{startatroot}
+
+\chapter{UAS-1 My Concepts}\label{uas-1-my-concepts}
 
 Mau hidup epik ? \href{lifestory.pdf}{Write your Life Story}
 
@@ -624,7 +979,7 @@ Apa itu berkonsep?
 
 \bookmarksetup{startatroot}
 
-\chapter{My Opinions}\label{my-opinions}
+\chapter{UAS-2 My Opinions}\label{uas-2-my-opinions}
 
 SApa itu beropini? \href{BM\%20Opini.mp4}{Opini Berpengaruh}
 
@@ -632,11 +987,11 @@ Bagiamana menjaadi menarik? \href{./Interesting.mp4}{Menjadi Menarik}
 
 \bookmarksetup{startatroot}
 
-\chapter{My Innovations}\label{my-innovations}
+\chapter{UAS-3 My Innovations}\label{uas-3-my-innovations}
 
 \bookmarksetup{startatroot}
 
-\chapter{My Knowledge}\label{my-knowledge}
+\chapter{UAS-4 My Knowledge}\label{uas-4-my-knowledge}
 
 Cara saya mengkomunikasikan sebuah pengatahuan sebagai petunjuk bagi
 orang lain 1) saya tulis
@@ -650,7 +1005,8 @@ pendukung trnsskrip} 4) lalu saya memproduksivideo audio visual
 
 \bookmarksetup{startatroot}
 
-\chapter{My Professional Reviews}\label{my-professional-reviews}
+\chapter{UAS-5 My Professional
+Reviews}\label{uas-5-my-professional-reviews}
 
 Untuk melkukan review, seperti pada
 \href{../My_Personal_Reviews/Doc.5.Mengevaluasi-Esai-Berdasarkan-Rubrik.pdf}{pendekatan
