--- a/My_Song_for_You/index.qmd
+++ b/My_Song_for_You/index.qmd
@@ -80,7 +80,7 @@ Once, I was seven years old
 
 ---
 
-## Why this song?
+## Kenapa lagu ini?
 
 Saya memilih lagu ini karena ini cocok untuk direnungkan pada setiap pilihan hidup saya dan perkembangan saya.  
 Bagi saya, tema terkuatnya adalah makna bertambah usia.
@@ -89,7 +89,7 @@ Lagu ini mengingatkan saya lagi jika sedang jenuh untuk melihat lagi ke belakang
 
 ---
 
-## Personal message
+## Pesan personal
 
 Pesan ini saya tujukan untuk diri saya di masa depan dan kedua orang tua yang telah membesarkanku.
 
@@ -98,7 +98,7 @@ Pesan ini saya tujukan untuk diri saya di masa depan dan kedua orang tua yang te
 
 ---
 
-## Reflection
+## Refleksi
 
 Lagu ini membuat saya melihat keputusan-keputusan penting:
 
