--- a/index.tex
+++ b/index.tex
@@ -433,6 +433,19 @@ Saya memilih lagu ini karena ini cocok untuk direnungkan pada setiap
 pilihan hidup saya dan perkembangan saya.\\
 Bagi saya, tema terkuatnya adalah makna bertambah usia.
 
+Awalnya lagu ini adalah pengisi hiburan dikala bosan saat di kelas. Guru
+SD saat itu bernama Pak Yanyan sering memutarkan lagu ini untuk menambah
+suasana ramai dan berwarna dalam kelas yang saat itu sedang santai.
+Seiring waktu berjalan setelah lulus dari jenjang SD, saya semakin
+jarang memutar lagu ini. Terkadang mengingat masa-masa SD sekaligus
+dengan lagu ini yang lagu saya sukai karena nadanya dan lirik yang
+gampang disebut juga dihafal, namun setelah mendengar lagu ini membuat
+saya menyadari betapa waktu cepat berjalan, di setiap langkah selalu
+memilih mana yang penting, mana yang baik, dan hal lain untuk kebaikan
+masa depan. Lagu ini juga membuat tenggelam pada masa lalu, dimana saya
+sangat senang bermain tanpa berpikir hal lain hanya kesenangan dan tawa
+yang ada saat itu.
+
 Lagu ini mengingatkan saya lagi jika sedang jenuh untuk melihat lagi ke
 belakang seberapa jauh dan banyak perjuangan yang telah ditempuh untuk
 mencapai titik ini.
