--- a/My_Personal_Reviews/index.qmd
+++ b/My_Personal_Reviews/index.qmd
@@ -1,24 +1,6 @@
 ## UTS-5 My Personal Reviews
 Berikut cara saya melakukan review: mengguan chatGPT, saya mengattach [file promt ChatGPT](skor_uts.pdf), disertai perintah : "self assess uts-1 sanpai uts-5 dari URL 'https://awp-confirm.github.io/all-about-me/'"  
 
-ChatGPT melakukan self-assessment UTS-1 s.d. UTS-5 langsung dari laman yang Anda berikan dan menilai memakai rubrik tugas UTS (skala 1–5 per kriteria). Rekap skor siap diunduh sebagai CSV: [Download CSV ringkasan](Self-Assessment_UTS-1_s_d__UTS-5__dibuat_otomatis_.csv).
+ChatGPT melakukan self-assessment UTS-1 s.d. UTS-5 langsung dari laman yang Anda berikan dan menilai memakai rubrik tugas UTS (skala 1–5 per kriteria). Rekap skor siap diunduh sebagai CSV: [Download CSV ringkasan](Self-Assessment_UTS-1_s_d__UTS-5__dibuat_otomatis_.csv). 
 
-# Hasil Self-Assessment UTS (URL: ii-2100.github.io/all-about-me)
-
-## Identifikasi
-
-* Nama & NIM penulis: **Muhammad Azikra Wira Pratama - 18224089** (tertera di halaman depan portofolio).
-* Penilai: **Self-assessment (Muhammad Azikra Wira Pratama)**
-* Catatan cakupan: halaman beranda memuat “About Me”; navigasi ke “My Songs for You”, “My Stories for You”, “My Shapes”, dan “My Personal Reviews” tersedia.
-
-## Tinjauan Umum
-
-* **UTS-1 (All About Me)** berisi narasi mengenai diri saya mulai dari "Identitas diri" hingga "Penutup". Yang intinya lebih membahas perspektif saya pada diri sendiri.
-* **UTS-2 (My Songs for You)** memuat lagu dan video "7 Years" beserta dengan lirik. Ini juga berisikan betapa bermaknanya lagu ini bagi saya.
-* **UTS-3 (My Stories for You)** berisikan kisah inspiratif langsung dari pengalaman diri sendiri yang ingin dibagikan melalui portofolio ini.
-* **UTS-4 (My SHAPE)** menampilkan hasil refleksi yang disesuaikan melalui Tes VIA Character Strength, serta dengan refleksi diri.
-* **UTS-5 (My Personal Reviews)** berisi metode/tautan panduan review self-asessment menggunakan kakas ChatGPT
-
----
-
-## Tinjauan Spesifik + Skor (1–5)
+# Hasil Self-Assessment UTS (URL: https://awp-confirm.github.io/all-about-me/)
